fixtures/runtime/invalid/type-error.php
<?php
// runtime-fixture: kind=invalid expected_rust_status=runtime_error
echo "abc" + 1;
